tests/NormalTests/paczka1/fuzzy1/14822734.err
Error in line 5: Xiv3jzWntM S632 46,1
Error in line 9: 5e202zJ-Pzx S632 163,5
Error in line 10: AH- S153 61,5
Error in line 7: 5e202zJwPzx S632 99,7
Error in line 2: S153 S153 37,5
Error in line 23: S153 S889 75,80
Error in line 22: 5e202zJwPzx A740 14,2
Error in line 32: AH4 S632 86,2
Error in line 29: S153 S889 129,9
